# thucal

./: .gitignore  CMakeLists.txt  Cal.cpp  Cal.h  Caltime.cpp  Caltime.h  LICENSE  README.md  TodoThing.cpp  TodoThing.h  Todolist.cpp  Todolist.h  Vevent.cpp  Vevent.h  VeventNoRepeat.cpp  VeventNoRepeat.h  VeventRepeat.cpp  VeventRepeat.h  academic.list  cal.cpp  cal.h  caltime.cpp  caltime.h  main.cpp  null (7).xls  test.ini  thucal.ics
