cmake_minimum_required(VERSION 3.5)
project(thucal)

set(CMAKE_CXX_STANDARD 11)
set(CURSES_NEED_NCURSES true)
set(CURSES_NEED_WIDE true)
set(CDK_LIBRARIES /usr/local/lib/libcdk.a)
set(CURSES_INCLUDE_DIR /usr/include/ncursesw)
set(CURSES_LIBRARIES /usr/lib/x86_64-linux-gnu/libncursesw.so)
include_directories(${CURSES_INCLUDE_DIR})
link_libraries(${CDK_LIBRARIES})
message(STATUS "${CURSES_INCLUDE_DIR}")
message(STATUS "${CURSES_LIBRARIES}")
add_executable(thucal main.cpp Cal.cpp Cal.h Todolist.cpp Todolist.h Caltime.cpp Caltime.h Vevent.cpp Vevent.h VeventRepeat.cpp VeventRepeat.h VeventNoRepeat.cpp VeventNoRepeat.h)

target_link_libraries(thucal ${CURSES_LIBRARIES})